# morpho.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  make
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/morpho/: brillouinzone.h  geometry.h  solver.h  types.h  utils.h
src/: brillouinzone.cpp  geometry.cpp  main.cpp  solver.cpp
